<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    >
    <ImageView
        android:id="@+id/kebab"
        android:layout_width="360dp"
        android:layout_height="400dp"
        android:layout_gravity="top|start"
        android:contentDescription="@string/kebab"
        android:src="@drawable/vet"
        />
    <Button
        android:id="@+id/leave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/leav"
        android:textSize="35sp"
        android:textColor="@color/white"
        android:backgroundTint="@color/black"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="20dp"
            android:layout_marginTop="400dp"
            android:text="@string/vet_name"
            android:textSize="35sp"
            android:textStyle="bold" />
        <TextView
            android:layout_width="381dp"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/avg_size"
            android:textSize="15sp"
            />
        <TextView
            android:layout_width="381dp"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/vet_desc"
            android:textSize="20sp" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vet_price"
            android:layout_marginTop="40dp"
            android:layout_gravity="center"
            android:textSize="23sp"
            android:backgroundTint="@color/orange"
            />
    </LinearLayout>
</FrameLayout>